Make the WPS client use URI instead of URL for WPS outputs as well as inputs