@@ -42,6 +42,8 @@ import static javax.xml.stream.XMLStreamConstants.START_ELEMENT;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -178,7 +180,7 @@ public class ExecuteResponse100Reader {
                     String href = reader.getAttributeValue( null, "href" );
                     ComplexFormat attribs = parseComplexAttributes();
                     String mimeType = attribs.getMimeType();
-                    output = new ComplexOutput( id, new URL( href ), mimeType, attribs.getEncoding(),
+                    output = new ComplexOutput( id, new URI( href ), mimeType, attribs.getEncoding(),
                                                 attribs.getSchema() );
                     XMLStreamUtils.nextElement( reader );
                 }
@@ -191,7 +193,7 @@ public class ExecuteResponse100Reader {
                 XMLStreamUtils.nextElement( reader ); // </Output>
                 XMLStreamUtils.nextElement( reader );
             }
-        } catch ( MalformedURLException e ) {
+        } catch ( URISyntaxException e ) {
             e.printStackTrace();
         }
 
